Library/AXL(Library)/Visual Basic/AXM.bas


' Set position deviation range between master and slave.
' API for PCI-R1604 / PCI-R3200-MLIII only
' lMasterAxisNo : Gantry Master Axis No
' dErrorRange : Setting value for position deviation range.
' uUse : A value for mode setting.
'      ( 0 : Disable)
'      ( 1 : Normal mode)
'      ( 2 : Flag Latch mode)
'      ( 3 : Flag Latch mode + SSTOP when error is occured)
'      ( 4 : Flag Latch mode + ESTOP when error is occured)
Public Declare Function AxmGantrySetErrorRange Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal dErrorRange As Double, ByVal uUse As Long) As Long
' Return setting value about position deviation range between master and slave.
Public Declare Function AxmGantryGetErrorRange Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef dpErrorRange As Double, ByRef upUse As Long) As Long
' Return result of comparing position deviation value between master and slave.
' dwpStatus : FALSE(0) -> Range of position deviation between master and slave is less than setting range. (Normal state)
'             TRUE(1)  -> Range of position deviation between master and slave is greater than setting range. (Abnormal state)
' It is returned 'AXT_RT_SUCCESS' only when Gantry Enable && Master/Slave's servo on state is satisfied.
' Call the 'AxmGantryReadErrorRangeComparePos', if you want to reset Latch Flag in case of latch mode.
Public Declare Function AxmGantryReadErrorRangeStatus Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef dwpStatus As Long) As Long
' Return position deviation value between master and slave.
' Maintain position deviation value at time of previous error occurrence until next error is occured.
' You should read only when 'dwpStatus' is 1. If you read ComparePos continuously, response speed will be slowed down by overload.
Public Declare Function AxmGantryReadErrorRangeComparePos Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef dpComparePos As Double) As Long






'==== Regular interpolation API ============================================================================================================================================;
' Do linear interpolate.
' API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
' For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
Public Declare Function AxmLineMove Lib "AXL.dll" (ByVal lCoord As Long, ByRef dpEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' Do linear interpolate. (Software)
' API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
' For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
Public Declare Function AxmLineMoveEx2 Lib "AXL.dll" (ByVal lCoord As Long, ByRef dpEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' Interpolate 2 axis arc
' API which moves arc interpolation by specifying start point, ending point and center point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and center point in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dEndPos = ending point X,Y array.
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleCenterMove Lib "AXL.dll" (ByVal lCoord As Long, ByRef lAxisNo As Long, ByRef dCenterPos As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Long) As Long


' API which arc interpolation moves by specifying middle point and ending point. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying middle point and ending point in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dMidPos = middle point, X,Y array , dEndPos = ending point X,Y array, lArcCircle = arc(0), circle(1)
Public Declare Function AxmCirclePointMove Lib "AXL.dll" (ByVal lCoord As Long, ByRef lAxisNo As Long, ByRef dMidPos As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArcCircle As Long) As Long

Public Declare Function AxmCirclePointMoveEx Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef lAxisNo As Long, ByRef dpMidPos As Double, ByRef dpEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lArcCircle As Long, ByVal lArraySize As Long) As Long


' API which arc interpolation moves by specifying start point, ending point and radius. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and radius in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dRadius = radius, dEndPos = ending point X,Y array , uShortDistance = small circle(0), large circle(1)
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleRadiusMove Lib "AXL.dll" (ByVal lCoord As Long, ByRef lAxisNo As Long, ByVal dRadius As Double, ByRef dEndPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Long, ByVal uShortDistance As Long) As Long


' API which arc interpolation moves by specifying start point, revolution angle and radius. It escapes from API after commencing of move.
' When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, revolution angle and radius in the specified  coordinates system.
' For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
' lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dAngle = angle.
' uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
Public Declare Function AxmCircleAngleMove Lib "AXL.dll" (ByVal lCoord As Long, ByRef lAxisNo As Long, ByRef dCenterPos As Double, ByVal dAngle As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal uCWDir As Long) As Long


'==== continuous interpolation API ============================================================================================================================================;
'Set continuous interpolation axis mapping in specific coordinates system.
'(Start axis mapping number from 0)
' Caution: In the axis mapping, the input must be started from smaller number.
'         In here, the axis of smallest number becomes master.
Public Declare Function AxmContiSetAxisMap Lib "AXL.dll" (ByVal lCoord As Long, ByVal lSize As Long, ByRef lpRealAxesNo As Long) As Long
' Return continuous interpolation axis mapping in specific coordinates system.
Public Declare Function AxmContiGetAxisMap Lib "AXL.dll" (ByVal lCoord As Long, ByRef lpSize As Long, ByRef lpRealAxesNo As Long) As Long
    Public Declare Function AxmContiResetAxisMap Lib "AXL.dll" (ByVal lCoordinate As Long) As Long


' Set continuous interpolation axis absolute/relative mode in specific coordinates system.
' (Caution : available to use only after axis mapping)
' St travel distance calculation mode of specific axis.
' uAbsRelMode : POS_ABS_MODE '0' - absolute coordinate system
'               POS_REL_MODE '1' - relative coordinate system
Public Declare Function AxmContiSetAbsRelMode Lib "AXL.dll" (ByVal lCoord As Long, ByVal uAbsRelMode As Long) As Long
' Return interpolation axis absolute/relative mode in specific coordinates system.
Public Declare Function AxmContiGetAbsRelMode Lib "AXL.dll" (ByVal lCoord As Long, ByRef upAbsRelMode As Long) As Long


' API which verifies whether internal Queue for the interpolation move is empty in specific coordinate system.
Public Declare Function AxmContiReadFree Lib "AXL.dll" (ByVal lCoord As Long, ByRef upQueueFree As Long) As Long
' API which verifies the number of interpolation move saved in internal Queue for the interpolation move in specific coordinate system
Public Declare Function AxmContiReadIndex Lib "AXL.dll" (ByVal lCoord As Long, ByRef lpQueueIndex As Long) As Long

' API which deletes all internal Queue saved for the continuous interpolation move in specific coordinate system
Public Declare Function AxmContiWriteClear Lib "AXL.dll" (ByVal lCoord As Long) As Long


' Start registration of tasks to be executed in continuous interpolation at the specific  coordinate system. After call this API,
' all motion tasks to be executed before calling of AxmContiEndNode API are not execute actual motion, but are registered as continuous interpolation motion,
' and when AxmContiStart API is called, then the registered motions execute actually
Public Declare Function AxmContiBeginNode Lib "AXL.dll" (ByVal lCoord As Long) As Long
' Finish registration of tasks to be executed in continuous interpolation at the specific  coordinate system.
Public Declare Function AxmContiEndNode Lib "AXL.dll" (ByVal lCoord As Long) As Long


' Start continuous interpolation.
' if dwProfileset is  CONTI_NODE_VELOCITY(0), use continuous interpolation.
'                     CONTI_NODE_MANUAL(1)  , set profile interpolation use.
'                     CONTI_NODE_AUTO(2)    , use auto-profile interpolation.

Public Declare Function AxmContiStart Lib "AXL.dll" (ByVal lCoord As Long, ByVal dwProfileset As Long, ByVal lAngle As Long) As Long
' API which verifies whether the continuous interpolation is moving in the specific coordinate system.
Public Declare Function AxmContiIsMotion Lib "AXL.dll" (ByVal lCoord As Long, ByRef upInMotion As Long) As Long

' API which verifies the index number of the continuous interpolation that is being moving currently while the continuous interpolation is moving in the specific coordinate system.
Public Declare Function AxmContiGetNodeNum Lib "AXL.dll" (ByVal lCoord As Long, ByRef lpNodeNum As Long) As Long
' API which verifies the index number of the continuous interpolation that is being moving currently while the continuous interpolation is moving in the specific coordinate system.
Public Declare Function AxmContiGetTotalNodeNum Lib "AXL.dll" (ByVal lCoord As Long, ByRef lpNodeNum As Long) As Long

